Se cambia el botton de carrito por icono de color blanco

--- a/views/componentes/menu.handlebars
+++ b/views/componentes/menu.handlebars
@@ -1,9 +1,11 @@
 {{!-- nadvar --}}
  <nav class="navbar bg-success">
     <div class="container-fluid d-flex justify-content-center ">
-            <a href="#" class="btn btn-outline-dark  ">
-                <i class="bi bi-cart"></i> Carrito
-            </a>
+            {{!-- dado que el desafio pide y exije un icono se comenta el boton --}}
+            {{!-- <i class="bi bi-cart text-white"></i> Carrito --}}
+            {{!-- <i class="bi bi-cart bi-4x text-white" aria-hidden="true"></i> --}}
+        <i class="bi bi-cart text-white" aria-hidden="true" style="font-size: 2rem;"></i>
+            
     </div>
 </nav>
 
