--- a/views/componentes/menu.handlebars
+++ b/views/componentes/menu.handlebars
@@ -11,17 +11,11 @@
 
 {{!-- modal --}}
 
-<div class="modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <p>Añadidos:</p>
-         {{#each carrito}}
-        <div class="col-4 producto" data-nombre="{{nombre}}">
-          <img src="/{{imagen}}" alt="{{nombre}}">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body row">
+            </div>
         </div>
-        {{/each}}
-      </div>
     </div>
-  </div>
 </div>
