Se realiza el ultimo cambio ya que el error estaba en la coneccion hacia el modal por id, y se arreglo el script con sus variables

--- a/views/componentes/menu.handlebars
+++ b/views/componentes/menu.handlebars
@@ -4,13 +4,12 @@
             {{!-- dado que el desafio pide y exije un icono se comenta el boton --}}
             {{!-- <i class="bi bi-cart text-white"></i> Carrito --}}
             {{!-- <i class="bi bi-cart bi-4x text-white" aria-hidden="true"></i> --}}
-        <i class="bi bi-cart text-white" aria-hidden="true" style="font-size: 2rem;"></i>  
+        <i id="carro" class="bi bi-cart text-white" aria-hidden="true" style="font-size: 2rem;"></i>  
     </div>
 </nav>
-
 {{!-- modal --}}
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body row">
